--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_glow: ^0.3.2
-  cupertino_icons: ^1.0.8
   synchronized_keyboard_listener: ^0.1.0
   media_kit: ^1.1.11
   media_kit_libs_audio: ^1.0.5
@@ -19,6 +18,7 @@ dependencies:
   window_manager: ^0.4.2
   number2words: ^0.0.5
   get: ^4.6.6
+  stop_watch_timer: ^3.2.1
 
 dev_dependencies:
   flutter_test:
