--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   number2words: ^0.0.5
   get: ^4.6.6
   stop_watch_timer: ^3.2.1
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
